// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar displays a badge 1`] = `
<span
  className=""
  name="First Last"
>
  <span
    className=""
  >
    FL
  </span>
  <div
    aria-hidden={true}
    className=""
  >
    <span
      className=""
    >
      <span
        aria-hidden={true}
        className=""
        role="presentation"
      >
        <svg
          className=""
          viewBox="0 0 2048 2048"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1570 437q42 0 78 15t64 43 42 63 16 79q0 40-15 77t-43 65l-794 795q-28 28-65 43t-77 16q-40 0-77-15t-65-44l-362-362q-28-28-43-65t-16-77q0-42 16-78t43-64 63-42 79-16q40 0 77 15t65 43l220 220 652-653q28-28 65-43t77-15z"
          />
        </svg>
      </span>
    </span>
  </div>
</span>
`;

exports[`Avatar displays custom initials via getInitials 1`] = `
<span
  className=""
  name="First Last"
>
  <span
    className=""
  >
    IA
  </span>
</span>
`;

exports[`Avatar handles customSize 1`] = `
<span
  className=""
  name="First Last"
  style={
    Object {
      "height": "33px",
      "width": "33px",
    }
  }
>
  <span
    className=""
  >
    FL
  </span>
</span>
`;

exports[`Avatar prioritizes image over icon 1`] = `
<span
  className=""
>
  <span
    className=""
  >
    <span
      className="icon"
    />
  </span>
  <img
    className=""
    src="i.png"
  />
</span>
`;

exports[`Avatar prioritizes image over initials 1`] = `
<span
  className=""
  name="First Last"
>
  <span
    className=""
  >
    FL
  </span>
  <img
    className=""
    src="i.png"
  />
</span>
`;

exports[`Avatar prioritizes image over initials and icon 1`] = `
<span
  className=""
  name="First Last"
>
  <span
    className=""
  >
    FL
  </span>
  <img
    className=""
    src="i.png"
  />
</span>
`;

exports[`Avatar prioritizes initials over icon 1`] = `
<span
  className=""
  name="First Last"
>
  <span
    className=""
  >
    FL
  </span>
</span>
`;

exports[`Avatar renders 1 initial with a 1-word name 1`] = `
<span
  className=""
  name="First"
>
  <span
    className=""
  >
    F
  </span>
</span>
`;

exports[`Avatar renders 2 initials with a 2-word name 1`] = `
<span
  className=""
  name="First Last"
>
  <span
    className=""
  >
    FL
  </span>
</span>
`;

exports[`Avatar renders 2 initials with a 3-word name 1`] = `
<span
  className=""
  name="First M. Last"
>
  <span
    className=""
  >
    FL
  </span>
</span>
`;

exports[`Avatar renders a default state 1`] = `
<span
  className=""
>
  <span
    className=""
  >
    <span
      aria-hidden={true}
      className="root-span"
    >
      <svg
        className="svg"
        fill="currentColor"
        height={20}
        viewBox="0 0 20 20"
        width={20}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10 2a4 4 0 100 8 4 4 0 000-8zM7 6a3 3 0 116 0 3 3 0 01-6 0z"
        />
        <path
          d="M5 11a2 2 0 00-2 2c0 1.7.83 2.97 2.13 3.8A9.14 9.14 0 0010 18c1.85 0 3.58-.39 4.87-1.2A4.35 4.35 0 0017 13a2 2 0 00-2-2H5zm-1 2a1 1 0 011-1h10a1 1 0 011 1c0 1.3-.62 2.28-1.67 2.95A8.16 8.16 0 0110 17a8.16 8.16 0 01-4.33-1.05A3.36 3.36 0 014 13z"
        />
      </svg>
    </span>
  </span>
</span>
`;

exports[`Avatar renders an icon 1`] = `
<span
  className=""
>
  <span
    className=""
  >
    <span
      className="icon"
    />
  </span>
</span>
`;

exports[`Avatar renders an icon if the name is not alphabetic 1`] = `
<span
  className=""
  name="(111)-555-1234"
>
  <span
    className=""
  >
    <span
      aria-hidden={true}
      className="root-span"
    >
      <svg
        className="svg"
        fill="currentColor"
        height={20}
        viewBox="0 0 20 20"
        width={20}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10 2a4 4 0 100 8 4 4 0 000-8zM7 6a3 3 0 116 0 3 3 0 01-6 0z"
        />
        <path
          d="M5 11a2 2 0 00-2 2c0 1.7.83 2.97 2.13 3.8A9.14 9.14 0 0010 18c1.85 0 3.58-.39 4.87-1.2A4.35 4.35 0 0017 13a2 2 0 00-2-2H5zm-1 2a1 1 0 011-1h10a1 1 0 011 1c0 1.3-.62 2.28-1.67 2.95A8.16 8.16 0 0110 17a8.16 8.16 0 01-4.33-1.05A3.36 3.36 0 014 13z"
        />
      </svg>
    </span>
  </span>
</span>
`;

exports[`Avatar renders an image 1`] = `
<span
  className=""
>
  <span
    className=""
  >
    <span
      aria-hidden={true}
      className="root-span"
    >
      <svg
        className="svg"
        fill="currentColor"
        height={20}
        viewBox="0 0 20 20"
        width={20}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10 2a4 4 0 100 8 4 4 0 000-8zM7 6a3 3 0 116 0 3 3 0 01-6 0z"
        />
        <path
          d="M5 11a2 2 0 00-2 2c0 1.7.83 2.97 2.13 3.8A9.14 9.14 0 0010 18c1.85 0 3.58-.39 4.87-1.2A4.35 4.35 0 0017 13a2 2 0 00-2-2H5zm-1 2a1 1 0 011-1h10a1 1 0 011 1c0 1.3-.62 2.28-1.67 2.95A8.16 8.16 0 0110 17a8.16 8.16 0 01-4.33-1.05A3.36 3.36 0 014 13z"
        />
      </svg>
    </span>
  </span>
  <img
    className=""
    src="i.png"
  />
</span>
`;
